this is not working

--- a/gpt-2-cloud-run/api_ui.html
+++ b/gpt-2-cloud-run/api_ui.html
@@ -72,7 +72,7 @@
         <i class="fas fa-robot fa-stack-1x fa-inverse"></i>
       </span>
     </span>
-    <div class="brand-text is-family-code is-uppercase has-text-weight-bold">GPT-2</div>
+    <div class="brand-text is-family-code is-uppercase has-text-weight-bold">Politispeech</div>
   </div>
 
   <div id="navbarBasicExample" class="navbar-menu is-active">
@@ -80,7 +80,7 @@
 
 
       <div class="navbar-item">
-        Generate custom text from an AI using GPT-2 (using the 117M default model)
+        Generate custom 2020 political candidate speeches using the GPT-2 model
       </div>
 
     </div>
@@ -88,7 +88,7 @@
     <div class="navbar-end">
       <div class="navbar-item is-hidden-touch">
         <div class="buttons">
-          <a class="button is-light" href="https://github.com/minimaxir/gpt-2-cloud-run" target="_blank">
+          <a class="button is-light" href="https://github.com/nsaripalli/political-gpt-2" target="_blank">
             <span class="icon">
               <i class="fab fa-lg fa-github"></i>
             </span><span>GitHub</span>
@@ -172,7 +172,9 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        Made using <a href="https://github.com/minimaxir/gpt-2-simple" target="_blank"><strong>gpt-2-simple</strong></a>
+        Made by Nithin Saripalli and the Northeastern School of Journalism. Model training data was based on previous
+        political speeches by candidates.
+        Based on <a href="https://github.com/minimaxir/gpt-2-simple" target="_blank"><strong>gpt-2-simple</strong></a>
         and <a href="https://github.com/minimaxir/gpt-2-cloud-run" target="_blank"><strong>gpt-2-cloud-run</strong></a>
         by <a href="https://minimaxir.com" target="_blank">Max Woolf</a>. Original GPT-2 model provided by <a
           href="https://openai.com" target="_blank">OpenAI</a>. This website content
