More explicit start warren

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="field">
                         <br>
                         <label class="label" id="candidate_speech_prompt">
-                            Please select a Candidate
+                            Warren's speech prompt
                         </label>
                         <div class="control">
                             <textarea id="prefix" class="textarea" type="text" placeholder="Donald Trump"
