--- a/index.html
+++ b/index.html
@@ -1,55 +1,6 @@
 <!DOCTYPE html>
 
-<style>
-    html,
-    body {
-        height: 95% !important;
-        margin: 0 !important;
-    }
-
-    footer {
-        /*max-height: 5% !important;*/
-        padding: 1em !important
-    }
-
-    section {
-        min-height: 95% !important
-    }
-
-    .gen-box {
-        background-color: #fff;
-        display: block;
-        padding: 1.25rem;
-        color: #4a4a4a;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.25;
-    }
-
-    .gen-border {
-        height: 0.25em;
-        background-color: #d5d5d5;
-    }
-
-    .gen-box.warning {
-        color: red;
-        font-weight: 700;
-
-    }
-
-    .brand-text {
-        display: flex;
-        align-items: center;
-        font-size: 1.5em
-    }
-
-    #extra-buttons {
-        padding-top: 1em;
-        margin-top: 1em;
-        border-top: 0.5px solid #d5d5d5;
-    }
-</style>
-
+<link rel="stylesheet" type="text/css" href="styles.css"/>
 <html>
 
 <head>
@@ -77,44 +28,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
-<nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-    <span class="icon is-large">
-      <span class="fa-stack">
-        <i class="fas fa-circle fa-stack-2x"></i>
-        <i class="fas fa-robot fa-stack-1x fa-inverse"></i>
-      </span>
-    </span>
-        <div class="brand-text is-family-code is-uppercase has-text-weight-bold">Politispeech</div>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu is-active">
-        <div class="navbar-start">
-
-
-            <div class="navbar-item">
-                Generate custom 2020 political candidate speeches using the GPT-2 model
-            </div>
-
-        </div>
-
-        <div class="navbar-end">
-            <div class="navbar-item is-hidden-touch">
-                <div class="buttons">
-                    <a class="button is-light" href="https://github.com/nsaripalli/political-gpt-2" target="_blank">
-            <span class="icon">
-              <i class="fab fa-lg fa-github"></i>
-            </span><span>GitHub</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</nav>
 
 <body>
 <section id="main" class="section">
     <div class="container">
+        <div class="Candidates">
+            <div class="Candidates-slides">
+                <div class="Candidates-slide">
+                    <img src="/media/biden.jpg" />
+                    <p class="speech-preview"><b>Biden:</b> 2020, we are trying to keep the cost of medicare and social security under control. but, you</p>
+                </div>
+                <div class="Candidates-slide">
+                    <img src="/media/bloomberg.jpg" />
+                    <p class="speech-preview"><b>Bloomberg:</b> 2020, the only group that actually promoted the notion that this is some kind of moral imperative that you have</p>
+                </div>
+                <div class="Candidates-slide">
+                    <img src="/media/buttigieg.jpg" />
+                    <p class="speech-preview"><b>Buttigieg:</b> 2020. but if you were wondering why i am even here, because the truth is, it is because</p>
+                </div>
+                <div class="Candidates-slide">
+                    <img src="/media/sanders.png" />
+                    <p class="speech-preview"><b>Sanders:</b> 2020: the truth is, we are hurting. we are not going anywhere. the only way we can</p>
+                </div>
+                <div class="Candidates-slide">
+                    <img src="/media/warren.jpg" />
+                    <p class="speech-preview"><b>Warren:</b> 2020 is a great fit for a couple who grew up in a country where women had very little say in</p>
+                </div>
+            </div>
+        </div>
+
         <div class="columns is-variable is-5">
             <div class="column is-narrow" style="width: 250px;">
                 <label for="candidate">Choose a candidate</label>
@@ -220,6 +162,8 @@
 
 
 </body>
+
+<!-- JAVASCRIPT ------------------------------------------>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
