--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                                 <input id="temperature" class="input" type="text" placeholder="0.7" value="0.7">
                             </div>
                             <p class="help">Controls the generated text "creativity." <em>(the higher the temperature, the
-                                more
-                                creative)</em></p>
+                                more creative)</em>
+                            </p>
                         </div>
                         <div class="field">
                             <label class="label">Top <em>k</em></label>
@@ -105,33 +105,40 @@
                                 <input id="top_k" class="input" type="text" placeholder="40" value="40">
                             </div>
                             <p class="help">Constrains the generated text tokens to the top <em>k</em> possibilities. <em>(set
-                                to 0 to
-                                disable)</em></p>
+                                to 0 to disable)</em>
+                            </p>
                         </div>
                     </div>
 
                     <div class="buttons">
-              <span class="control">
-                <button type="submit" name="submit" id="generate-text" class="button is-link">
-                  <span class="icon">
-                    <i class="fas fa-md fa-pen"></i>
-                  </span><span>Generate Text!</span></button>
-              </span>
-
+                        <span class="control">
+                            <button type="submit" name="submit" id="generate-text" class="button is-link">
+                                <span class="icon">
+                                    <i class="fas fa-md fa-pen"></i>
+                                </span>
+                                <span>Generate Text!</span>
+                            </button>
+                        </span>
                     </div>
                 </form>
                 <div id="extra-buttons" class="buttons">
-            <span class="control">
-              <button id="save-image" class="button is-success">
-                <span class="icon">
-                  <i class="fas fa-md fa-save"></i>
-                </span><span>Save Image</span></button>
-            </span>
                     <span class="control">
-              <button id="clear-text" class="button is-danger">
-                <span class="icon">
-                  <i class="fas fa-md fa-trash-alt"></i>
-                </span><span>Clear Texts</span></button> </span></div>
+                        <button id="save-image" class="button is-success">
+                            <span class="icon">
+                            <i class="fas fa-md fa-save"></i>
+                            </span><span>Save Image</span>
+                        </button>
+                    </span>
+
+                    <span class="control">
+                        <button id="clear-text" class="button is-danger">
+                            <span class="icon">
+                            <i class="fas fa-md fa-trash-alt"></i>
+                            </span>
+                            <span>Clear Texts</span>
+                        </button> 
+                    </span>
+                </div>
             </div>
             <div id="model-output" class="column">
                 <p id="tutorial" class="subtitle"><em>Generated text will appear here!
