--- a/index.html
+++ b/index.html
@@ -30,129 +30,124 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet"></head>
 
 <body>
-<section id="main" class="section">
-    <div class="container">
-        <div class="Candidates">
-            <div class="Candidates-slides">
-                <div class="Candidates-slide">
-                    <img src="/media/biden.jpg" />
-                    <p class="speech-preview"><b>Biden:</b> 2020, we are trying to keep the cost of medicare and social security under control. but, you</p>
-                </div>
-                <div class="Candidates-slide">
-                    <img src="/media/bloomberg.jpg" />
-                    <p class="speech-preview"><b>Bloomberg:</b> 2020, the only group that actually promoted the notion that this is some kind of moral imperative that you have</p>
-                </div>
-                <div class="Candidates-slide">
-                    <img src="/media/buttigieg.jpg" />
-                    <p class="speech-preview"><b>Buttigieg:</b> 2020. but if you were wondering why i am even here, because the truth is, it is because</p>
-                </div>
-                <div class="Candidates-slide">
-                    <img src="/media/sanders.png" />
-                    <p class="speech-preview"><b>Sanders:</b> 2020: the truth is, we are hurting. we are not going anywhere. the only way we can</p>
-                </div>
-                <div class="Candidates-slide">
-                    <img src="/media/warren.jpg" />
-                    <p class="speech-preview"><b>Warren:</b> 2020 is a great fit for a couple who grew up in a country where women had very little say in</p>
-                </div>
+<main>
+    <div class="Candidates">
+        <div class="Candidates-slides">
+            <div class="Candidates-slide">
+                <img src="/media/biden.jpg" />
+                <p class="speech-preview"><b>Biden:</b> 2020, we are trying to keep the cost of medicare and social security under control. but, you</p>
             </div>
-        </div>
-
-        <div class="settings">
-            <div class="settings-col">
-                <label for="candidate">Choose a candidate</label>
-
-                <select id="candidate">
-                    <option value="Sanders">Bernie Sanders</option>
-                    <option value="Biden">Joe Biden</option>
-                    <option value="Bloomberg">Micheal Bloomberg</option>
-                    <option value="Warren" selected="selected">Elizabeth Warren</option>
-                    <option value="Buttigieg">Pete Buttigieg</option>
-                </select>
-
-                <form id="gen-form">
-                    <div class="field">
-                        <br>
-                        <label class="label" id="candidate_speech_prompt">
-                            Warren's speech prompt
-                        </label>
-                        <div class="control">
-                            <textarea id="prefix" class="textarea" type="text" placeholder="Donald Trump"
-                                      rows="2"></textarea>
-                        </div>
-                        <p class="help">Starts the generated text with the specified text. <em>(Optional: max 500
-                            characters)</em></p>
-                    </div>
-                    <div class="field">
-                        <label class="label">Generated Text Length</label>
-                        <div class="control">
-                            <input id="length" class="input" type="text" placeholder="Text input" value="100">
-                        </div>
-                        <p class="help">Length of the text in tokens to generate. <em>(max: 1023)</em></p>
-                    </div>
-                    <div class="settings-advanced">
-                        <div class="field">
-                            <label class="label">Temperature</label>
-                            <div class="control">
-                                <input id="temperature" class="input" type="text" placeholder="0.7" value="0.7">
-                            </div>
-                            <p class="help">Controls the generated text "creativity." <em>(the higher the temperature, the
-                                more creative)</em>
-                            </p>
-                        </div>
-                        <div class="field">
-                            <label class="label">Top <em>k</em></label>
-                            <div class="control">
-                                <input id="top_k" class="input" type="text" placeholder="40" value="40">
-                            </div>
-                            <p class="help">Constrains the generated text tokens to the top <em>k</em> possibilities. <em>(set
-                                to 0 to disable)</em>
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="buttons">
-                        <span class="control">
-                            <button type="submit" name="submit" id="generate-text" class="button is-link">
-                                <span class="icon">
-                                    <i class="fas fa-md fa-pen"></i>
-                                </span>
-                                <span>Generate Text!</span>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-                <div id="extra-buttons" class="buttons">
-                    <span class="control">
-                        <button id="save-image" class="button is-success">
-                            <span class="icon">
-                            <i class="fas fa-md fa-save"></i>
-                            </span><span>Save Image</span>
-                        </button>
-                    </span>
-
-                    <span class="control">
-                        <button id="clear-text" class="button is-danger">
-                            <span class="icon">
-                            <i class="fas fa-md fa-trash-alt"></i>
-                            </span>
-                            <span>Clear Texts</span>
-                        </button> 
-                    </span>
-                </div>
+            <div class="Candidates-slide">
+                <img src="/media/bloomberg.jpg" />
+                <p class="speech-preview"><b>Bloomberg:</b> 2020, the only group that actually promoted the notion that this is some kind of moral imperative that you have</p>
             </div>
-            <div id="model-output" class="column">
-                <p id="tutorial" class="subtitle"><em>Generated text will appear here!
-                    Use the form to configure GPT-2 and press <strong>Generate Text</strong>
-                    to get your own text!
-                </em></p>
+            <div class="Candidates-slide">
+                <img src="/media/buttigieg.jpg" />
+                <p class="speech-preview"><b>Buttigieg:</b> 2020. but if you were wondering why i am even here, because the truth is, it is because</p>
+            </div>
+            <div class="Candidates-slide">
+                <img src="/media/sanders.png" />
+                <p class="speech-preview"><b>Sanders:</b> 2020: the truth is, we are hurting. we are not going anywhere. the only way we can</p>
+            </div>
+            <div class="Candidates-slide">
+                <img src="/media/warren.jpg" />
+                <p class="speech-preview"><b>Warren:</b> 2020 is a great fit for a couple who grew up in a country where women had very little say in</p>
             </div>
         </div>
     </div>
 
+    <div class="settings">
+        <div class="settings-col">
+            <label for="candidate">Choose a candidate</label>
 
-</section>
+            <select id="candidate">
+                <option value="Sanders">Bernie Sanders</option>
+                <option value="Biden">Joe Biden</option>
+                <option value="Bloomberg">Micheal Bloomberg</option>
+                <option value="Warren" selected="selected">Elizabeth Warren</option>
+                <option value="Buttigieg">Pete Buttigieg</option>
+            </select>
 
-<footer class="footer">
+            <form id="gen-form">
+                <div class="field">
+                    <br>
+                    <label class="label" id="candidate_speech_prompt">
+                        Warren's speech prompt
+                    </label>
+                    <div class="control">
+                        <textarea id="prefix" class="textarea" type="text" placeholder="Donald Trump"
+                                    rows="2"></textarea>
+                    </div>
+                    <p class="help">Starts the generated text with the specified text. <em>(Optional: max 500
+                        characters)</em></p>
+                </div>
+                <div class="field">
+                    <label class="label">Generated Text Length</label>
+                    <div class="control">
+                        <input id="length" class="input" type="text" placeholder="Text input" value="100">
+                    </div>
+                    <p class="help">Length of the text in tokens to generate. <em>(max: 1023)</em></p>
+                </div>
+                <div class="settings-advanced">
+                    <div class="field">
+                        <label class="label">Temperature</label>
+                        <div class="control">
+                            <input id="temperature" class="input" type="text" placeholder="0.7" value="0.7">
+                        </div>
+                        <p class="help">Controls the generated text "creativity." <em>(the higher the temperature, the
+                            more creative)</em>
+                        </p>
+                    </div>
+                    <div class="field">
+                        <label class="label">Top <em>k</em></label>
+                        <div class="control">
+                            <input id="top_k" class="input" type="text" placeholder="40" value="40">
+                        </div>
+                        <p class="help">Constrains the generated text tokens to the top <em>k</em> possibilities. <em>(set
+                            to 0 to disable)</em>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="buttons">
+                    <span class="control">
+                        <button type="submit" name="submit" id="generate-text" class="button is-link">
+                            <span class="icon">
+                                <i class="fas fa-md fa-pen"></i>
+                            </span>
+                            <span>Generate Text!</span>
+                        </button>
+                    </span>
+                </div>
+            </form>
+            <div id="extra-buttons" class="buttons">
+                <span class="control">
+                    <button id="save-image" class="button is-success">
+                        <span class="icon">
+                        <i class="fas fa-md fa-save"></i>
+                        </span><span>Save Image</span>
+                    </button>
+                </span>
+
+                <span class="control">
+                    <button id="clear-text" class="button is-danger">
+                        <span class="icon">
+                        <i class="fas fa-md fa-trash-alt"></i>
+                        </span>
+                        <span>Clear Texts</span>
+                    </button> 
+                </span>
+            </div>
+        </div>
+        <div id="model-output" class="column">
+            <p id="tutorial" class="subtitle"><em>Generated text will appear here!
+                Use the form to configure GPT-2 and press <strong>Generate Text</strong>
+                to get your own text!
+            </em></p>
+        </div>
+    </div>
+</main>
+<footer>
     <div class="content has-text-centered">
         <p>
             Made by Nithin Saripalli and the Northeastern School of Journalism. Model training data was based on
