--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         Warren's speech prompt
                     </label>
                     <div class="control">
-                        <textarea id="prefix" class="textarea" type="text" placeholder="Donald Trump"
+                        <textarea id="prefix" class="textarea" type="text" placeholder="Health care"
                                     rows="2"></textarea>
                     </div>
                     <p class="help">Starts the generated text with the specified text. <em>(Optional: max 500
@@ -84,7 +84,7 @@
                 <div class="field">
                     <label class="label">Generated Text Length</label>
                     <div class="control">
-                        <input id="length" class="input" type="text" placeholder="Text input" value="100">
+                        <input id="length" class="input" type="text" placeholder="Text input" value="20">
                     </div>
                     <p class="help">Length of the text in tokens to generate. <em>(max: 1023)</em></p>
                 </div>
