Organize two col layout for settings

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
     <div class="settings">
         <div class="settings-col">
             <label for="candidate">Choose a candidate</label>
-
             <select id="candidate">
                 <option value="Sanders">Bernie Sanders</option>
                 <option value="Biden">Joe Biden</option>
@@ -67,7 +66,6 @@
                 <option value="Warren" selected="selected">Elizabeth Warren</option>
                 <option value="Buttigieg">Pete Buttigieg</option>
             </select>
-
             <form id="gen-form">
                 <div class="field">
                     <br>
@@ -139,7 +137,7 @@
                 </span>
             </div>
         </div>
-        <div id="model-output" class="column">
+        <div class="settings-col" id="model-output">
             <p id="tutorial" class="subtitle"><em>Generated text will appear here!
                 Use the form to configure GPT-2 and press <strong>Generate Text</strong>
                 to get your own text!
