--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <main>
     <div class="header">
         <h1>Generating Political Speech</h1>
+        <p class="intro">What happens if we replace speech writers with a machine learning model</p>
     </div>
     <div class="Candidates">
         <div class="Candidates-slides">
@@ -62,8 +63,7 @@
     <div class="settings">
         <div class="settings-col" id="model-output">
             <p id="tutorial" class="subtitle"><em>Generated text will appear here!
-                Use the form to configure GPT-2 and press <strong>Generate Text</strong>
-                to get your own text!
+                Select a candidate and enter a talking point (optional) to generate a speech.
             </em></p>
         </div>
         <div class="settings-col settings-form">
