Update formatting for carousel speech previews

--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
         <div class="Candidates-slides">
             <div class="Candidates-slide">
                 <img src="/media/biden.jpg" />
-                <p class="speech-preview"><b>Biden:</b> 2020, we are trying to keep the cost of medicare and social security under control. but, you</p>
+                <p class="speech-preview"><b>Biden</b>: <i>2020</i>, we are trying to keep the cost of medicare and social security under control. but, you</p>
             </div>
             <div class="Candidates-slide">
                 <img src="/media/bloomberg.jpg" />
-                <p class="speech-preview"><b>Bloomberg:</b> 2020, the only group that actually promoted the notion that this is some kind of moral imperative that you have</p>
+                <p class="speech-preview"><b>Bloomberg</b>: <i>2020</i>, the only group that actually promoted the notion that this is some kind of moral imperative that you have</p>
             </div>
             <div class="Candidates-slide">
                 <img src="/media/buttigieg.jpg" />
-                <p class="speech-preview"><b>Buttigieg:</b> 2020. but if you were wondering why i am even here, because the truth is, it is because</p>
+                <p class="speech-preview"><b>Buttigieg</b>: <i>2020</i>. but if you were wondering why i am even here, because the truth is, it is because</p>
             </div>
             <div class="Candidates-slide">
-                <img src="/media/sanders.png" />
-                <p class="speech-preview"><b>Sanders:</b> 2020: the truth is, we are hurting. we are not going anywhere. the only way we can</p>
+                <img src="/media/sanders.jpg" />
+                <p class="speech-preview"><b>Sanders</b>: <i>2020</i>: the truth is, we are hurting. we are not going anywhere. the only way we can</p>
             </div>
             <div class="Candidates-slide">
                 <img src="/media/warren.jpg" />
-                <p class="speech-preview"><b>Warren:</b> 2020 is a great fit for a couple who grew up in a country where women had very little say in</p>
+                <p class="speech-preview"><b>Warren</b>: <i>2020</i>&nbsp; is a great fit for a couple who grew up in a country where women had very little say in</p>
             </div>
         </div>
     </div>
