Add my name and link to the footer

--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
 <footer>
     <div class="content has-text-centered">
         <p>
-            Made by Nithin Saripalli and the Northeastern School of Journalism. Model training data was based on
-            previous
-            political speeches by candidates.
+            Made by Nithin Saripalli, <a href="https://alexanderlim.io/" target="_blank">Alex Lim</a> and the Northeastern School of Journalism. Model training data was based on
+            previous political speeches by candidates.
             <br>
             Based on <a href="https://github.com/minimaxir/gpt-2-simple"
                         target="_blank"><strong>gpt-2-simple</strong></a>
