Revert footer font size and ajust padding

--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
     </div>
 </main>
 <footer>
-    <p>
+    <p class="footer-content">
         Made by Nithin Saripalli, <a href="https://alexanderlim.io/" target="_blank">Alex Lim</a> and the Northeastern School of Journalism. Model training data was based on
         previous political speeches by candidates.
-        <br>
+    </p>
+    <p>
         Based on <a href="https://github.com/minimaxir/gpt-2-simple"
                     target="_blank"><strong>gpt-2-simple</strong></a>
         and <a href="https://github.com/minimaxir/gpt-2-cloud-run" target="_blank"><strong>gpt-2-cloud-run</strong></a>
