--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </main>
 <footer>
     <p class="footer-content">
-        Made by Nithin Saripalli, <a href="https://alexanderlim.io/" target="_blank">Alex Lim</a> and the Northeastern School of Journalism. Model training data was based on
+        Made by <a href="https://nithin.info/" target="_blank">Nithin Saripalli</a>, <a href="https://alexanderlim.io/" target="_blank">Alex Lim</a> and the Northeastern School of Journalism. Model training data was based on
         previous political speeches by candidates.
     </p>
     <p>
