--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                         <p class="help">Starts the generated text with the specified text. <em>(Max 100
                             characters)</em></p>
                     </div>
-                    <div class="settings-advanced">
+                    <a id="advanced-settings-toggle">Advanced Settings</a>
+                    <div id="settings-advanced" class="hidden">
                         <div class="field">
                             <label class="label">Generated Text Length</label>
                             <div class="control">
@@ -228,6 +229,22 @@
 
                 saveAs(canvas.toDataURL(), 'gen_texts.png');
             });
+        });
+
+        $('#advanced-settings-toggle').click(function (e) {
+            var settings = document.getElementById('settings-advanced');
+            if (settings.classList) { 
+                settings.classList.toggle("hidden");
+            } else {
+                var classes = settings.className.split(" ");
+                var i = classes.indexOf("hidden");
+
+                if (i >= 0) 
+                classes.splice(i, 1);
+                else 
+                classes.push("hidden");
+                settings.className = classes.join(" "); 
+            }
         });
 
     });
