Add toggle for advanced settings

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="help">Starts the generated text with the specified text. <em>(Max 100
                             characters)</em></p>
                     </div>
-                    <a id="advanced-settings-toggle">Advanced Settings</a>
+                    <a id="advanced-settings-toggle">Additional Settings</a>
                     <div id="settings-advanced" class="hidden">
                         <div class="field">
                             <label class="label">Generated Text Length</label>
